# shipyard_pnp_ws

./: .gitignore  README.md  README_EXPERIMENTS.md
results/: report_experiments.tex
src/shipyard_pnp/: package.xml  setup.cfg  setup.py
src/shipyard_pnp/config/: factory_layout.yaml  globalvision_rois.example.yaml  globalvision_rois.yaml  hardware_ports.yaml  hmac_secrets.yaml  topic_acl.yaml
src/shipyard_pnp/launch/: pnp_full_system.launch.py  pnp_sim_smoke.launch.py  vendor_globalvision.launch.py  vendor_green_conveyors.launch.py  vendor_niryo.launch.py  vendor_ufactory.launch.py
src/shipyard_pnp/shipyard_pnp/factory/: cycle_tracker.py  db_writer.py  factory_supervisor.py  piece_tracker.py  state_tracker.py  system_state_publisher.py  vendor_client.py
src/shipyard_pnp/shipyard_pnp/factory/planner/: classification_rules.py  conveyor_rules.py  feeding_rules.py  initialization_rules.py  processing_rules.py  shutdown_rules.py  unloading_rules.py
src/shipyard_pnp/shipyard_pnp/nodes/: dashboard_node.py  shipyard_sim.py
src/shipyard_pnp/shipyard_pnp/shared/: __init__.py  acl_guard.py  contracts.py  messages.py  time_ids.py  topic_acl.py
src/shipyard_pnp/shipyard_pnp/vendors/arduino_vacuum/: arduino_vacuum_driver.py  arduino_vacuum_vendor_supervisor.py
src/shipyard_pnp/shipyard_pnp/vendors/bantam/: bantam_adapter.py  bantam_vendor_supervisor.py  door_adapter.py
src/shipyard_pnp/test/: conftest.py  test_acl.py  test_boundary_enforcement.py  test_messages.py  test_proprietary_confinement.py  test_resource_routing.py  test_vendor_registry.py
(+61 files in other folders)
